Fix FormLayout components alignment issue when no responsive step for 1 specified

--- a/frontend/themes/myapp/crypto-prices-view.css
+++ b/frontend/themes/myapp/crypto-prices-view.css
@@ -29,7 +29,3 @@ h1 {
 	width: 210px;
 	height: 80px;
 }
-
-vaadin-form-layout > * {
-	margin-left: 0;
-}
